tests/NormalTests/paczka2/big_fuzzy/84941878.err
Error in line 5: 19PZQph S569 %%,5
Error in line 3: 4MjmV A1 11,3
Error in line 4: 8TbLE76 S569 54,2
Error in line 13: 8TbLE76 A63 36,6
Error in line 26: 19PZQph A63 11,3
Error in line 30: N3baaX A63 89,2
Error in line 49: I6Pc0JeCHn A63 48l0
Error in line 40: IW4KfUMJNr S55 79,5
Error in line 53: IW4KfUMJNr A1 84,4
Error in line 48: I6Pc0JeCHn S569 16,1
Error in line 50: 4MjmV S569 85,5
Error in line 36: 19PZQph S569 59,3
Error in line 68: 19PZQph S55 53,9
Error in line 71: I6Pc0JeCHn S569 65,2
Error in line 85: 4MjmV A1 355,3
Error in line 87: IW4KfUMJNr S55 10,4
Error in line 78: A63 A1 92,7
Error in line 94: 19PZQph S569 189,0
Error in line 113: I6Pc0JeCHn S569 10,8
Error in line 127: I6Pc0JeCHn S55 55,9
Error in line 115: 19PZQph S55 77,9
Error in line 134: 8TbLE76 A63 26,1
Error in line 126: A63 A1 40,2
Error in line 132: N3baaX S55 72,8
Error in line 150: 8TbLE76 A63 43,9
Error in line 148: 4MjmV A63 62,2
Error in line 162: I6Pc0JeCHn A63 25,6
Error in line 176: I6Pc0JeCHn A1 50,6
Error in line 174: 4MjmV S55 28,8
Error in line 184: 4MjmV A1 15,8
Error in line 181: A63 S55 5,4
Error in line 220: I6Pc0JeCHn S569 4,90
Error in line 228: IW4KfUMJNr S569 198,7
Error in line 240: 19PZQph S569 198,60
Error in line 231: I6Pc0JeCHn S569 15,1
Error in line 239: N3baaX S569 17,0
Error in line 242: I6Pc0JeCHn A1 45,8
